@@ -8,7 +8,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclOOMethod.c,v 1.24 2008/05/31 22:30:13 dkf Exp $
+ * RCS: @(#) $Id: tclOOMethod.c,v 1.25 2008/06/01 08:05:46 dkf Exp $
  */
 
 #ifdef HAVE_CONFIG_H
@@ -124,6 +124,7 @@ Tcl_NewInstanceMethod(
     if (nameObj == NULL) {
 	mPtr = (Method *) ckalloc(sizeof(Method));
 	mPtr->namePtr = NULL;
+	mPtr->refCount = 1;
 	goto populate;
     }
     if (!oPtr->methodsPtr) {
@@ -134,6 +135,7 @@ Tcl_NewInstanceMethod(
     hPtr = Tcl_CreateHashEntry(oPtr->methodsPtr, (char *) nameObj, &isNew);
     if (isNew) {
 	mPtr = (Method *) ckalloc(sizeof(Method));
+	mPtr->refCount = 1;
 	mPtr->namePtr = nameObj;
 	Tcl_IncrRefCount(nameObj);
 	Tcl_SetHashValue(hPtr, mPtr);
@@ -147,7 +149,6 @@ Tcl_NewInstanceMethod(
   populate:
     mPtr->typePtr = typePtr;
     mPtr->clientData = clientData;
-    mPtr->refCount = 1;
     mPtr->flags = 0;
     mPtr->declaringObjectPtr = oPtr;
     mPtr->declaringClassPtr = NULL;
@@ -191,11 +192,13 @@ Tcl_NewMethod(
     if (nameObj == NULL) {
 	mPtr = (Method *) ckalloc(sizeof(Method));
 	mPtr->namePtr = NULL;
+	mPtr->refCount = 1;
 	goto populate;
     }
     hPtr = Tcl_CreateHashEntry(&clsPtr->classMethods, (char *)nameObj,&isNew);
     if (isNew) {
 	mPtr = (Method *) ckalloc(sizeof(Method));
+	mPtr->refCount = 1;
 	mPtr->namePtr = nameObj;
 	Tcl_IncrRefCount(nameObj);
 	Tcl_SetHashValue(hPtr, mPtr);
@@ -210,7 +213,6 @@ Tcl_NewMethod(
     clsPtr->thisPtr->fPtr->epoch++;
     mPtr->typePtr = typePtr;
     mPtr->clientData = clientData;
-    mPtr->refCount = 1;
     mPtr->flags = 0;
     mPtr->declaringObjectPtr = NULL;
     mPtr->declaringClassPtr = clsPtr;
